--- a/index.html
+++ b/index.html
@@ -163,6 +163,33 @@
     <!-- ===================
         Commounity Part End
      ====================== -->
+    <!-- ===================
+        Service Part start
+     ====================== -->
+     <section class="service">
+      <div class="container">
+        <div class="row align-items-lg-center">
+          <div class="col-lg-5">
+            <img src="./images/rafiki.png" alt="">
+          </div>
+          <div class="col-lg-7">
+            <div class="title title2">
+              <h2>The unseen of spending three years at Pixelgrade
+              </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.
+              </p>
+              <div class="common-button">
+                <a href="">Learn More</a>
+            </div>
+             </div>
+
+          </div>
+        </div>
+      </div>
+     </section>
+    <!-- ===================
+        Service Part End
+     ====================== -->
 
     <script src="./js/bootstrap.bundle.min.js"></script>
     
