--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 
@@ -189,6 +190,69 @@
      </section>
     <!-- ===================
         Service Part End
+     ====================== -->
+    <!-- ===================
+        Deteles Part start
+     ====================== -->
+     <section class="deteils">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <div class="title">
+              <h2>Helping a local <span>business reinvent itself</span>
+              </h2>
+              <p>We reached here with our hard work and dedication
+              </p>
+             </div>
+          </div>
+          <div class="col-lg-6 ">
+            <div class="box">
+              <div class="payment-box">
+                <div>
+                  <img src="./images/payment.png" alt="">
+                </div>
+                <div>
+                  <h4>2,245,341</h4>
+                  <p>Members</p>
+                </div>
+              </div>
+              <div class="payment-box">
+                <div>
+                  <img src="./images/payment.png" alt="">
+                </div>
+                <div>
+                  <h4>2,245,341</h4>
+                  <p>Members</p>
+                </div>
+              </div>
+              <div class="payment-box">
+                <div>
+                  <img src="./images/payment.png" alt="">
+                </div>
+                <div>
+                  <h4>2,245,341</h4>
+                  <p>Members</p>
+                </div>
+              </div>
+             
+              <div class="payment-box">
+                <div>
+                  <img src="./images/payment.png" alt="">
+                </div>
+                <div>
+                  <h4>2,245,341</h4>
+                  <p>Members</p>
+                </div>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+
+      </div>
+     </section>
+    <!-- ===================
+        Deteles Part End
      ====================== -->
 
     <script src="./js/bootstrap.bundle.min.js"></script>
