service2 part end

--- a/index.html
+++ b/index.html
@@ -255,6 +255,36 @@
         Deteles Part End
      ====================== -->
 
+
+    <!-- ===================
+    Service2 Part start
+     ====================== -->
+     <section class="service">
+      <div class="container">
+        <div class="row align-items-lg-center">
+          <div class="col-lg-5">
+            <img src="./images/service2.png" alt="">
+          </div>
+          <div class="col-lg-7">
+            <div class="title title2">
+              <h2>How to design your site footer like we did
+              </h2>
+              <p>Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero ultrices mollis. In hac habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus ipsum id gravida.
+              </p>
+              <div class="common-button">
+                <a href="">Learn More</a>
+            </div>
+             </div>
+
+          </div>
+        </div>
+      </div>
+     </section>
+
+    <!-- ===================
+    Service2 Part End
+     ====================== -->
+
     <script src="./js/bootstrap.bundle.min.js"></script>
     
 </body>
