--- a/index.html
+++ b/index.html
@@ -284,6 +284,39 @@
     <!-- ===================
     Service2 Part End
      ====================== -->
+    <!-- ===================
+    Coustumer Part start
+     ====================== -->
+     <section class="customer">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-4">
+            <img src="./images/customer.png" alt="">
+          </div>
+          <div class="col-lg-8">
+            <div>
+              <p>Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
+              <h6>Tim Smith</h6>
+              <p>British Dragon Boat Racing Association</p>
+              <div class="slider">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
+                <div>
+                  <h4>Meet all customers <i class="fa-solid fa-arrow-right"></i></h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     </section>
+    <!-- ===================
+    Coustumer Part End
+     ====================== -->
 
     <script src="./js/bootstrap.bundle.min.js"></script>
     
