--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
+   
 
 </head>
 <body>
@@ -73,7 +74,9 @@
 
                 </div>
                 <div class="col-lg-5">
+                   <div class="bannerImage">
                     <img src="./images/banner.png" alt="">
+                   </div>
                 </div>
             </div>
             
@@ -126,7 +129,7 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-sm-6  col-lg-4">
             <div class="card" style="width: 18rem;">
               <img src="./images/Icon.png" class="card-img-top" alt="...">
               <div class="card-body">
@@ -136,7 +139,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-sm-6  col-lg-4">
             <div class="card" style="width: 18rem;">
               <img src="./images/Icon.png" class="card-img-top" alt="...">
               <div class="card-body">
@@ -146,7 +149,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-sm-6  col-lg-4">
             <div class="card" style="width: 18rem;">
               <img src="./images/Icon.png" class="card-img-top" alt="...">
               <div class="card-body">
@@ -172,7 +175,10 @@
       <div class="container">
         <div class="row align-items-lg-center">
           <div class="col-lg-5">
-            <img src="./images/rafiki.png" alt="">
+            <div class="service-banner">
+              <img src="./images/rafiki.png" alt="">
+            </div>
+           
           </div>
           <div class="col-lg-7">
             <div class="title title2">
@@ -264,7 +270,9 @@
       <div class="container">
         <div class="row align-items-lg-center">
           <div class="col-lg-5">
-            <img src="./images/service2.png" alt="">
+            <div class="service-banner">
+              <img src="./images/service2.png" alt="">
+            </div>
           </div>
           <div class="col-lg-7">
             <div class="title title2">
@@ -292,7 +300,9 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-4">
-            <img src="./images/customer.png" alt="">
+            <div class="customer-banner">
+              <img src="./images/customer.png" alt="">
+            </div>
           </div>
           <div class="col-lg-8">
             <div>
@@ -300,6 +310,14 @@
               <h6>Tim Smith</h6>
               <p>British Dragon Boat Racing Association</p>
               <div class="slider">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
+                <img src="./images/customerImage1.png" alt="">
                 <img src="./images/customerImage1.png" alt="">
                 <img src="./images/customerImage1.png" alt="">
                 <img src="./images/customerImage1.png" alt="">
